--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_mixins.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_mixins.less
@@ -1,18 +1,18 @@
 ﻿.link-arrow-right(@c) when (@c = @white) {
     &::after {
-        background-image: url('../Imgs/icon_arrow_w.png');
+        background-image: url('@{img-directory}icon_arrow_w.png');
     }
 }
 
 .link-arrow-right(@c) when (@c = @brown) {
     &::after {
-        background-image: url('../Imgs/icon_arrow_br.png');
+        background-image: url('@{img-directory}icon_arrow_br.png');
     }
 }
 
 .link-arrow-right(@c) when (@c = @orange) {
     &::after {
-        background-image: url('../Imgs/icon_arrow_or.png');
+        background-image: url('@{img-directory}icon_arrow_or.png');
     }
 }
 
