Add a comment about the 36 column grid.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
@@ -1,4 +1,10 @@
-﻿// bootstrap
+﻿//
+// IMPORTANT
+// Theme.less uses a 36 column grid not the default bootstrap 12 column grid, 
+// because the LccNetwork layout requires smaller column increments.
+// --------------------------------------------------
+
+// bootstrap
 
 @import 'Bootstrap/less/variables.less';
 @import 'Bootstrap/less/mixins.less';
