Tweak the latest news view.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetLatestNews.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetLatestNews.cshtml
@@ -19,7 +19,7 @@
         // get the mediaPart at index in the media library picker field
         return field != null &&
             field.MediaParts != null &&
-            field.MediaParts.Count >= index ?
+            field.MediaParts.Count > index ?
             field.MediaParts[index] : null;        
     }
 }
