Finish beta version of Staff projection.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageStaff.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageStaff.cshtml
@@ -2,47 +2,61 @@
 @using System.Linq;
 @using Orchard.ContentManagement;
 @using Orchard.Utility.Extensions;
+@using LccNetwork.Bootstrap.Extensions;
 
 @functions
 {
-    dynamic GetMainPartFromContentItem(ContentItem item)
+    void SortContentItemsByAssociatedLcc(List<ContentItem> contentItems)
     {
-        // get the ContentPart that has the same name as the item's ContentType
-        // so that we can access the item fields.
-        var contentType = item.TypeDefinition.Name;
-        var parts = item.Parts as List<ContentPart>;
-        return parts.First(p => p.PartDefinition.Name.Equals(contentType));  
-    }
+        // sort by associated lcc
+        Comparison<ContentItem> comparison = (item1, item2) =>
+        {
+            // part
+            dynamic mainPart1 = MyFunctions.GetMainPartFromContentItem(item1);
+            dynamic mainPart2 = MyFunctions.GetMainPartFromContentItem(item2);
+            // term
+            var lccTermPart1 = MyFunctions.GetTermPartFromTaxonomyField(mainPart1.Lcc);
+            var lccTermPart2 = MyFunctions.GetTermPartFromTaxonomyField(mainPart2.Lcc);
+            // lcc
+            var associatedLcc1 = lccTermPart1 != null ? lccTermPart1.Name : string.Empty;
+            var associatedLcc2 = lccTermPart2 != null ? lccTermPart2.Name : string.Empty;
 
-    dynamic GetTermPartFromTaxonomyField(dynamic field, int index = 0)
-    {
-        // get the termPart at index in the taxonomy field
-        return field !=null &&
-            field.Terms != null &&
-            field.Terms.Count > index ? 
-            field.Terms[index] : null;
+            return string.Compare(associatedLcc1, associatedLcc2);
+
+        };
+
+        contentItems.Sort(comparison);
     }
 }
 
 @{
-    var contentItems = (Model.ContentItems as IEnumerable<ContentItem>);
+    var contentItems = (Model.ContentItems as IEnumerable<ContentItem>).ToList();
     var cssClass = contentItems.First().TypeDefinition.Name.HtmlClassify();
-
-    <ul>
-        @foreach (ContentItem item in contentItems)
+    SortContentItemsByAssociatedLcc(contentItems);
+    var lastLcc = string.Empty;
+    foreach (ContentItem item in contentItems)
+    {
+        var itemDisplayUrl = Url.ItemDisplayUrl(item);
+        // get the mainPart, so we can access the item's fields
+        dynamic mainPart = MyFunctions.GetMainPartFromContentItem(item);
+        var firstName = mainPart.FirstName.Value;
+        var lastName = mainPart.LastName.Value;
+        var position = mainPart.Position.Value;
+        var email = mainPart.Email.Value;
+        var lccTermPart = MyFunctions.GetTermPartFromTaxonomyField(mainPart.Lcc);
+        var associatedLcc = lccTermPart != null ? lccTermPart.Name : string.Empty;        
+        if (!associatedLcc.Equals(lastLcc))
         {
-            var itemDisplayUrl = Url.ItemDisplayUrl(item);
-            // get the mainPart, so we can access the item's fields
-            dynamic mainPart = GetMainPartFromContentItem(item);
-            var firstName = mainPart.FirstName.Value;
-            var lastName = mainPart.LastName.Value;
-            var position = mainPart.Position.Value;
-            var email = mainPart.Email.Value;
-            var lccTermPart = GetTermPartFromTaxonomyField(mainPart.Lcc);
-            var associatedLcc = lccTermPart != null ? lccTermPart.Name : string.Empty;
-            <li>
-                <p>@firstName @lastName @position @email @associatedLcc</p>
-            </li>
+            <h2>@associatedLcc</h2>
         }
-    </ul>
+        if (associatedLcc.Length == 0 && lastLcc.Length == 0)
+        {
+            <p><a href="mailto:@email">@firstName @lastName</a> - <strong>@position</strong></p>
+        }
+        else
+        {
+            <p><a href="mailto:@email">@firstName @lastName</a> - <span>@position</span></p>
+        }
+        lastLcc = associatedLcc;
+    }
 }
