--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageResources.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageResources.cshtml
@@ -1,9 +1,27 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿@using System.Dynamic;
+@using System.Linq;
+@using Orchard.ContentManagement;
+@using Orchard.Utility.Extensions;
+@using LccNetwork.Bootstrap.Extensions;
 
-</body>
-</html>
+@{
+    var contentItems = (Model.ContentItems as IEnumerable<ContentItem>).ToList();
+    var cssClass = contentItems.First().TypeDefinition.Name.HtmlClassify();
+
+    <ul class="list-unstyled @cssClass">
+        @foreach (dynamic item in contentItems)
+        {
+            var itemDisplayUrl = Url.ItemDisplayUrl((IContent)item);
+            // get the mainPart, so we can access the item's fields
+            dynamic mainPart = MyFunctions.GetMainPartFromContentItem(item);
+            // get the fields 
+            var title = item.TitlePart.Title;
+            var body = item.BodyPart.Text;            
+
+            <li class="clearfix">
+                <h3>@title</h3>                
+                @Html.Raw(body)                
+            </li>
+        }
+    </ul>
+}
