--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageNewsItems.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageNewsItems.cshtml
@@ -13,7 +13,7 @@
         {
             var itemDisplayUrl = Url.ItemDisplayUrl((IContent)item);
             // get the mainPart, so we can access the item's fields
-            dynamic mainPart = MyFunctions.GetMainPartFromContentItem(item);
+            var mainPart = MyFunctions.GetMainPartFromContentItem(item);
             // get the fields
             var date = mainPart.Date.DateTime.ToString("MMMM d, yyyy");
             var learnMoreUrl = mainPart.LearnMoreField.Value;
